force-app/main/default/objects/APS_Contact__c/APS_Contact__c.object-meta.xml
<CustomObject>
    <description>Contacts associated with specific Account Plans and Strategies</description>
    <label>APS Contact</label>
    <nameField>
        <displayFormat>APSC-{00000}</displayFormat>
        <label>APS Contact Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APS Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>