force-app/main/default/objects/APS_Contact__c/fields/Account_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Account_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Strategy</label>
    <referenceTo>SFDC_Strategy__c</referenceTo>
    <relationshipLabel>APS Contacts</relationshipLabel>
    <relationshipName>APS_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>