force-app/main/default/objects/APS_Contact__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes specific to this Account Plan and/or Strategy.  Please enter general Contact notes/comments on the Contact record itself.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>