force-app/main/default/objects/APS_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Key Influencer</fullName>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Evaluator</fullName>
            </value>
            <value>
                <fullName>Customer Corporate Contact</fullName>
            </value>
            <value>
                <fullName>Customer Project Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>